resources/assets/sass/main.scss
// Variables
    
    @import 'variables';

html {
    position: relative;
    min-height: 100%
}

body {
    background: #fff;
}

b, strong {
    font-weight: normal;
}

.hide {
    display: none!important;
}

a:focus,
button:focus {
    outline: 0
}

.page-content p {
    line-height: 1.6;
}

.page-content .ws {
    white-space: nowrap;
}

.faq-title {
    font-family: "GothamBookRegular";
} 

.hirer-cta {
    display: block;
    float: right;
    margin-top: -80px;
}

.about-cta {
    margin-bottom: 20px;
}

.page-content .staff-image {
    float: left;
    margin: 0 20px 0 0;
    width: 30%;
}

.page-content hr {
    margin-top: 30px;
    margin-bottom: 30px;
    border: 0;
    border-top: 1px solid #ccc;
}

.red{
    color: $red-two;
}

.clearfix {
    clear: both;
}

.p-l-0 {
    padding-left: 0
}

.p-r-0 {
    padding-right: 0
}

.fw-normal, .fw-normal label {
    font-weight: normal !important;
}

.p-rel {
    position: relative
}

.m-right-10 {
    margin-right: 10px
}

.m-left-10 {
    margin-left: 10px
}

.m-right-7 {
    margin-right: 7px
}

.m-left-7 {
    margin-left: 7px
}

.m-top-100 {
    margin-top: 100px;
}

.m-top-75 {
    margin-top: 75px;
}

.m-top-80 {
    margin-top: 80px;
}

.m-top-60 {
    margin-top: 60px;
}

.m-btm-0 {
    margin-bottom: 0
}

.m-btm-4 {
    margin-bottom: 4px;
}

.m-top-45 {
    margin-top: 45px;
}

.candidate-filters {
    margin-top: 20px;
}

.m-top-45 {
    margin-top: 45px;
}

.p-top-0 {
    padding-top: 0;
}

.p-lr-15 {
    padding-left: 15px !important;
    padding-right: 15px !important;
}

.m-30 {
    margin: 30px;
}

.m-0 {
    margin: 0;
}

.m-top-90 {
    margin-top: 90px;
}

.m-btm-30 {
    margin-bottom: 30px;
}

.m-top-25 {
    margin-top: 25px;
}

.m-top-30 {
    margin-top: 30px;
}

.m-top-5 {
    margin-top: 5px;
}

.m-top-50 {
    margin-top: 50px;
}

.m-top-20 {
    margin-top: 20px !important;
}

.m-top-10 {
    margin-top: 10px;
}

.no-justify {
    justify-content: inherit !important;
}

.pad-right-40 {
    padding-right: 20px;
    margin-right: 20px;
}

.pad-right-15 {
    padding-right: 15px;
}

.b-b-1 {
    border-bottom: 1px solid #ececec;
}

.b-0 {
    border: 0;
}

.right-alert {
    width: 70%;
    float: right;
    color: red;
    font-size: 10px;
    text-align: right
}

.tag-br {
    width: 100%;
    display: block;
    margin-top: 6px;
}

hr.xs {
    margin-top: 5px !important;
    margin-bottom: 5px !important;
}

.badge-white {
    background: #fff;
    color: #333;
}

.badge-green{
    background: $light-green;
    color: #fff;
}

.text-right {
    text-align: right;
}

.tag_btn {
    border-radius: 3px !important;
}

.fs-50 {
    font-size: 50px;
}

.fs-24 {
    font-size: 24px;
}

.fs-23 {
    font-size: 23px;
}

.fs-12 {
    font-size: 12px !important;
}

.fs-13 {
    font-size: 13px !important;
}


.img-responsive {
    width: 100%
}

.p-5 {
    padding: 5px;
}

.white-space {
    white-space: pre-line;
    text-align: center;
}

.b-left {
    border-left: 2px solid #efefef;
}

.b-top {
    border-top: 1px solid #efefef;
}

.b-none {
    border: 0 !important
}

.text-center{
    text-align: center;
}

.label-danger {
    background-color: #d16565;
}

.label-danger.label-outline {
    background-color: #fff;
    color: #d16565;
    font-weight: bolder;
    border: 3px solid #d16565;
    padding: 2px 5px;
    margin-bottom: 2px;
    display: inline-block;
}

.label-danger.label-outline .brand-close {
    background-position: 208px -315px;
    width: 7px;
    height: 7px;
}

.label-inline {
    margin-right: 4px;
    margin-bottom: 6px;
    display: inline-block;
}

.form-control.select2-container {
    height: 46px !important;
    line-height: 46px !important;
    border-radius: 0px !important;
    display: block;
    width: 100%;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;

}

.display-inline {
    display: inline !important;
}

.display-none {
    display: none !important;
}

.tooltip-inner {
    max-width: 350px !important;
    width: 350px !important;
    padding: 20px !important;
    text-align: left !important;
}

.modal-sm {
    max-width: 400px !important;
    min-width: 300px !important;
    width: auto !important;
}

a.firmlink:focus, a.firmlink:hover {
    text-decoration: none !important;
}

.university-tag {
    margin-top: 5px;
}

.university-tag2 {
    margin-top: 5px;
}

.select2-drop {
    color: #333 !important;
}

.select2-results li:first-child {
    display: none;
}

.select2-results .select2-result-with-children li:first-child {
    display: list-item !important;
}

.select2-results .select2-highlighted {
    background: #1e90ff !important;
}

.select2-container-active .select2-choice,
.select2-container-active .select2-choices {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

.select2-container .select2-choice > .select2-chosen {
    padding-left: 12px !important;
}

.select2-container .select2-choice {
    height: 46px !important;
    line-height: 46px !important;
    background-image: none !important;
    border-radius: 0px !important;
}

.select2-drop-active {
    border: 1px solid #66afe9 !important;
    border-top: none;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6) !important;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6) !important;
}
/* ... */

